proxies: Ensure that Ipsilon is told it's reached over HTTPS
This should make sure that Ipsilon is aware it's reached over HTTPS from
external, and should make it use HTTPS for redirects

Related: https://pagure.io/fedora-infrastructure/issue/9943
Signed-off-by: Patrick Uiterwijk <patrick@puiterwijk.org>

--- a/playbooks/include/proxies-reverseproxy.yml
+++ b/playbooks/include/proxies-reverseproxy.yml
@@ -182,6 +182,7 @@
     destname: id
     proxyurl: http://localhost:10020
     keephost: true
+    header_scheme: true
     tags:
     - id.fedoraproject.org
 
