Task to create bodhi user complaints there is no bodhi user.

--- a/roles/bodhi2/base/tasks/main.yml
+++ b/roles/bodhi2/base/tasks/main.yml
@@ -22,6 +22,8 @@
     shell: /sbin/nologin
     home: /usr/share/bodhi
     system: yes
+    append: yes 
+    state: present
 
 - name: Configure alembic
   template:
