--- a/roles/bodhi2/base/tasks/main.yml
+++ b/roles/bodhi2/base/tasks/main.yml
@@ -9,10 +9,10 @@
     owner: root
     group: root
 
-- name: Create the bodhi group
-  group:
-    name: bodhi
-    system: yes
+#- name: Create the bodhi group
+#  group:
+#    name: bodhi
+#    system: yes
 
 - name: Create the bodhi user
   user:
