Trying to force symlink creation despite directory already existing.

--- a/roles/bodhi2/backend/tasks/main.yml
+++ b/roles/bodhi2/backend/tasks/main.yml
@@ -276,8 +276,7 @@
   - bodhi
 
 - name: make a mnt/koji link
-  file: state=link src=/mnt/fedora_koji/koji dest=/mnt/koji
-  force: yes
+  file: state=link src=/mnt/fedora_koji/koji dest=/mnt/koji force=yes
   tags:
   - bodhi
 
