--- a/playbooks/manual/push-badges.yml
+++ b/playbooks/manual/push-badges.yml
@@ -104,6 +104,8 @@
   handlers:
   - import_tasks: "{{ handlers_path }}/restart_services.yml"
 
-  - name: run  /usr/local/bin/update_checkout.sh
-    command:  /usr/local/bin/update_checkout.sh
-    delegate_to: badges-web01.iad2.fedoraproject.org
+- name: run  /usr/local/bin/update_checkout.sh
+  hosts: badges_web
+
+  tasks:
+  - command:  /usr/local/bin/update_checkout.sh
