--- a/roles/openshift-apps/fedora-packages-static/templates/configmap.yml
+++ b/roles/openshift-apps/fedora-packages-static/templates/configmap.yml
@@ -6,5 +6,5 @@ metadata:
   labels:
     app: fedora-packages-static
 data:
-  solr-url: "http://solr.solr.svc.cluster.local:8983/"
+  solr-url: "https://solr{{ env_suffix }}.fedoraproject.org:8983/"
   sitemap-url: "https://packages{{ env_suffix }}.fedoraproject.org"
